[project]
name = "astrbot-plugin-lkwg-toolbox"
version = "0.1.0"
description = "AstrBot plugin for Luoke Wangguo tools"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.45.0",
]

[project.urls]
Repository = "https://github.com/fqxue/astrbot_plugin_lkwg_toolbox"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
