[project]
name = "astrbot-plugin-lkwg-toolbox"
version = "0.1.0"
description = "AstrBot plugin for Luoke Wangguo tools"
requires-python = ">=3.12"
dependencies = [
    "astrbot>=4.24.2",
    "playwright>=1.45.0",
]

[project.urls]
Repository = "https://github.com/fqxue/astrbot_plugin_lkwg_toolbox"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
